k8s/apps/umami/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-postgres
  namespace: matflixlab
spec:
  selector:
    app: umami-postgres
  ports:
  - port: 5432
    targetPort: 5432
