k8s/apps/umami/umami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: matflixlab
spec:
  selector:
    app: umami
  ports:
  - port: 3000
    targetPort: 3000
